# vonavy_chronos

./: .gitignore  DATASET_PROFILE_MODELING_AUDIT.md  README.md  pyproject.toml  requirements-chronos.in  requirements-chronos.txt  task.md
.github/workflows/: pages.yml
data/: test_data.parquet  train_data.parquet
docs/: README.md  app.js  common.js  dataset.html  dataset.js  evaluation.html  evaluation.js  index.html  model.html  model.js  results.json  styles.css
ml/: chronos2_profiles.json  dashboard_artifacts.py  export_results.py  finalize_publication.py  framework.py  pipeline.py  provenance.py  publish_static.py  static_site.py
ml/models/: __init__.py  chronos2_model.py  neural_net.py
outputs/: README.md  SHA256SUMS  challenge_comparison.csv  final_audit_consumed.json  final_audit_summary.csv  probabilistic_summary.csv  results.json  sanity_baseline.csv  weight_sensitivity.csv
outputs/publications/: 0035ce321a45e748.json  020a9a7c12853753.json  080faedcfa0736dc.json  2a6c1a011302e1bf.json  31aa65af1fbe6242.json  8433c85d5befea71.json  925f281bf6e54e53.json  9ff589e9cfd94f31.json  a15439ee81b2cd4c.json  a336b487e8515584.json  c71379942d815bb9.json  dee600fdd4b20e7a.json  fcc4ccd0eff10281.json
outputs/runs/: 941bbd3a1dd0cf23.json
tests/: pages_http_smoke_test.js  test_challenge_contract.py  test_chronos2.py  test_hardening_contracts.py  webapp_smoke_test.js
webapp/: server.py
webapp/static/: app.js  common.js  dataset.html  evaluation.html  evaluation.js  index.html  model.html  model.js  results.json  styles.css
